@@ -36,6 +36,7 @@ public:
   void enable_external_filter(bool enable);
   bool set_sampling_parameters(double clock_freq, sampling_method method,
 			       double sample_freq, double pass_freq = -1);
+  void adjust_sampling_frequency(double sample_freq);
 
   void fc_default(const fc_point*& points, int& count);
   PointPlotter<sound_sample> fc_plotter();
@@ -90,6 +91,8 @@ protected:
 
   reg8 bus_value;
   cycle_count bus_value_ttl;
+
+  double clock_frequency;
 
   // Sampling variables.
   cycle_count sample_offset;
